--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <%= link_to "Edit Password", edit_user_path(current_user) %> |
         <%= link_to "Logout", logout_path %>
       <% else %>
-		<%= link_to "New User", new_user_path
+		<%= link_to "New User", new_user_path %>
         <%= link_to "Login", login_path %>
       <% end %>
     </div>
