--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -12,8 +12,8 @@
 
 <% @beers.each do |beer| %>
   <tr>
-    <td><%= beer.name %></td>
-	<td><%= beer.brewery.name %></td>
+    <td><%= link_to beer.name, beer %></td>
+	<td><%= link_to beer.brewery.name, beer.brewery %></td>
     <td><%= beer.description %></td>
     <td><%= link_to 'Show', beer %></td>
     <td><%= link_to 'Edit', edit_beer_path(beer) %></td>
