--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -20,6 +20,33 @@
   <%= @brewery.state %>
 </p>
 
+<div id="itemlist">
+<table>
+  <tr>
+    <th width=150>Beer</th>
+	<th width=150>Bar</th>
+    <th width=100>Price</th>
+    <th></th>
+    <th></th>
+    <th></th>
+  </tr>
+<% @beers.each do |beer| %>
+<tr>
+<% beer.beer_items do |item| %>
+  <tr>
+      <td><%= link_to item.beer.name, item.beer %></td>
+	  <td><%= link_to item.bar.name, item.bar %></td>
+      <td><%= number_to_currency(item.price) %></td>
+      <td><%= link_to 'Show', item %></td>
+      <td><%= link_to 'Edit', edit_beer_item_path(item) %></td>
+      <td><%= link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete %></td>
+  </tr>
+<% end %>
+</tr>
+<% end %>
+</table>
+</div>
+
 
 <%= link_to 'Edit', edit_brewery_path(@brewery) %> |
 <%= link_to 'Back', breweries_path %>
