--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -20,6 +20,9 @@
   <%= @brewery.state %>
 </p>
 
+<%= link_to 'Edit', edit_brewery_path(@brewery) %> |
+<%= link_to 'Back', breweries_path %>
+
 <div id="itemlist">
 <table>
   <tr>
@@ -28,16 +31,14 @@
     <th width=100>Price</th>
     <th></th>
     <th></th>
-    <th></th>
   </tr>
 <% @beers.each do |beer| %>
 <tr>
-<% beer.beer_items do |item| %>
+<% beer.beer_items.each do |item| %>
   <tr>
       <td><%= link_to item.beer.name, item.beer %></td>
 	  <td><%= link_to item.bar.name, item.bar %></td>
       <td><%= number_to_currency(item.price) %></td>
-      <td><%= link_to 'Show', item %></td>
       <td><%= link_to 'Edit', edit_beer_item_path(item) %></td>
       <td><%= link_to 'Destroy', item, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
@@ -46,7 +47,3 @@
 <% end %>
 </table>
 </div>
-
-
-<%= link_to 'Edit', edit_brewery_path(@brewery) %> |
-<%= link_to 'Back', breweries_path %>
