--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 		<%= link_to "Beers", beers_path %> | 
 		<%= link_to "Bars", bars_path %> | 
 		<%= link_to "Breweries", breweries_path %> |
-		<%= link_to "New User", new_user_path %>
+		<%= link_to "New User", new_user_path %> |
         <%= link_to "Login", login_path %>
       <% end %>
     </div>
