--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -1,23 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <b>Name:</b>
-  <%= @bar.name %>
-</p>
+<h1><%= @bar.name %></h1>
 
 <p>
-  <b>Address:</b>
-  <%= @bar.address %>
-</p>
-
-<p>
-  <b>Zip:</b>
-  <%= @bar.zip %>
-</p>
-
-<p>
-  <b>State:</b>
-  <%= @bar.state %>
+  <%= @bar.address %>  <%= @bar.zip %>  <%= @bar.state %>
 </p>
 
 <p>
