--- a/app/views/beer_items/index.html.erb
+++ b/app/views/beer_items/index.html.erb
@@ -1,4 +1,8 @@
-<h1>Listing All Entries</h1>
+<p />
+<h2>What you've found</h2>
+<p>
+You've stumbled on the best thing to happen to the Atlanta beer scene since Brickstore opened.  This is your gateway to to beers and bars around the Atlanta area.  Use this site to find the best deal on that special beer you've been looking for or just check to see if the bar around the corner has a new one on tap.
+</p>
 
 <table>
   <tr>
