--- a/app/views/beer_items/_form.html.erb
+++ b/app/views/beer_items/_form.html.erb
@@ -13,12 +13,12 @@
 
   <div class="field">
      <%= f.label "Beer Name" %><br />
-     <%= collection_select :beer_item, :beer_id, Beer.all, :id, :name %>
+     <%= collection_select :beer_item, :beer_id, Beer.order('name ASC'), :id, :name %>
   </div>
  
   <div class="field">
      <%= f.label :name %><br />
-     <%= collection_select :beer_item, :bar_id, Bar.all, :id, :name %><br />
+     <%= collection_select :beer_item, :bar_id, Bar.order('name ASC'), :id, :name %><br />
   </div>
 
   <div class="field">
