--- a/app/views/beers/_form.html.erb
+++ b/app/views/beers/_form.html.erb
@@ -18,7 +18,7 @@
 
   <div class="field">
      <%= f.label "Brewery Name" %><br />
-     <%= collection_select :beer, :brewery_id, Brewery.all, :id, :name %>
+     <%= collection_select :beer, :brewery_id, Brewery.order('name ASC'), :id, :name %>
   </div>
 
   <div class="field">
