--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -1,11 +1,10 @@
 <h1>Beers</h1>
 
 <table>
-  <tr>
-    <th>Name</th>
-	<th>Brewery</th>
-    <th>Description</th>
-    <th></th>
+  <tr align="left">
+    <th width=150>Name</th>
+	<th width=220>Brewery</th>
+    <th width=200>Description</th>
     <th></th>
     <th></th>
   </tr>
@@ -15,7 +14,6 @@
     <td><%= link_to beer.name, beer %></td>
 	<td><%= link_to beer.brewery.name, beer.brewery %></td>
     <td><%= beer.description %></td>
-    <td><%= link_to 'Show', beer %></td>
     <td><%= link_to 'Edit', edit_beer_path(beer) %></td>
     <td><%= link_to 'Destroy', beer, :confirm => 'Are you sure?', :method => :delete %></td>
   </tr>
