Fixed Back Buttons

--- a/app/views/breweries/show.html.erb
+++ b/app/views/breweries/show.html.erb
@@ -21,7 +21,7 @@
 </p>
 
 <%= link_to 'Edit', edit_brewery_path(@brewery) %> |
-<%= link_to 'Back', breweries_path %>
+<%= link_to 'Back', :back %>
 
 <div id="itemlist">
 <table>
