--- a/app/views/beer_items/show.html.erb
+++ b/app/views/beer_items/show.html.erb
@@ -17,4 +17,4 @@
 
 
 <%= link_to 'Edit', edit_beer_item_path(@beer_item) %> |
-<%= link_to 'Back', beer_items_path %>
+<%= link_to 'Back', :back %>
