--- a/app/views/bars/show.html.erb
+++ b/app/views/bars/show.html.erb
@@ -35,5 +35,7 @@
 </table>
 </div>
 
-<%= link_to 'Edit', edit_bar_path(@bar) %> |
+<% if @bar.has_permission? current_user %>
+	<%= link_to 'Edit', edit_bar_path(@bar) %> |
+<% end %>
 <%= link_to 'Back', :back %>
