--- a/app/views/beer_items/show.html.erb
+++ b/app/views/beer_items/show.html.erb
@@ -16,5 +16,7 @@
 </p>
 
 
-<%= link_to 'Edit', edit_beer_item_path(@beer_item) %> |
+<% if @beer_item.bar.has_permission? current_user %>
+	<%= link_to 'Edit', edit_beer_item_path(@beer_item) %> |
+<% end %>
 <%= link_to 'Back', :back %>
