--- a/app/views/beers/show.html.erb
+++ b/app/views/beers/show.html.erb
@@ -34,7 +34,7 @@
     <th width=150>Bar</th>
 	<th width=150>Address</th>
     <th width=100>Price</th>
-	<th width=100>ABD</th>
+	<th width=100>ABD (oz)</th>
     <th></th>
     <th></th>
     <th></th>
