--- a/app/views/bars/index.html.erb
+++ b/app/views/bars/index.html.erb
@@ -1,36 +1,8 @@
 <h1>Bars</h1>
 
-<table>
-  <tr align="left">
-	<th width=10></th>
-    <th width=150>Name</th>
-	<th width=200>Address</th>
-    <th width=100>Zip</th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @bars.each do |bar| %>
-  <tr>
-	<% if bar.is_followed? current_user %>
-		<td><b>*</b></td>
-	<% else %>
-		<td></td>
-	<% end %>
-    <td><%= link_to bar.name, bar %></td>
-	<td><%= bar.address %></td>
-    <td><%= bar.zip %></td>
-	<% if bar.has_permission? current_user %>
-		<span class="actions">
-		    <td><%= link_to 'Edit', edit_bar_path(bar) %></td>
-		    <td><%= link_to 'Destroy', bar, :confirm => 'Are you sure?', :method => :delete %></td>
-		</span>
-	<% end %>
-  </tr>
-<% end %>
-</table>
-
-<br />
+<div id="bar_list">
+<%= render 'list' %>
+</div>
 
 <%= link_to 'New Bar', new_bar_path %>
 
