--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -10,6 +10,8 @@ prohibited this user from being saved:</h2>
     </ul>
     </div>
     <% end %>
+    
+    <p>This website is currently in beta.  I appologize for an errors you may encounter. </p>
 
     <div class="field">
       <%= f.label :email %><br />
