--- a/app/views/bars/_list.html.erb
+++ b/app/views/bars/_list.html.erb
@@ -1,3 +1,54 @@
+<% if not current_user.bars.empty? %> 
+<h2>Following</h2><br />
+<table>
+  <tr align="left">
+	<th width=20></th>
+    <th width=120>Name</th>
+	<th width=200>Address</th>
+    <th width=100>Zip</th>
+    <th></th>
+    <th></th>
+  </tr>
+<% current_user.bars.find(:all, :order=>"name ASC").each do |f| %>
+  <tr>
+	<td>
+	<div id="follow_form">
+	<% if logged_in? %>
+		<% if f.is_followed? current_user %>
+			<%= form_for current_user.bar_followings.find_by_bar_id(f.id),
+             		:html => { :method => :delete },
+             		:remote => true do |h| %>
+  				<div class="following"><%= image_submit_tag "full_circle.png" %></div>
+			<% end %>
+		<% else %>
+			<%= form_for current_user.bar_followings.build(:bar_id => f.id), :remote => true do |g| %>
+				<div><%= g.hidden_field :bar_id %></div>
+  				<div class="following"><%= image_submit_tag "empty_circle.png" %></div>
+			<% end %>
+		<% end %>
+	<% end %>
+	</div>
+	</td>
+    <td><%= link_to f.name, f %></td>
+	<td><%= f.address %></td>
+    <td><%= f.zip %></td>
+	<% if f.has_permission?(current_user) %>
+		<span class="actions">
+		    <td><%= link_to 'Edit', f, :action => :edit %>
+		    <td><%= link_to 'Destroy', f, :confirm => 'Are you sure?', :method => :delete %></td>
+		</span>
+	<% else %>
+		<td> </td>
+		<td> </td>
+	<% end %>
+  </tr>
+<% end %>
+</table> 
+<br />
+<% end %>
+
+<h2>All Bars</h2> <br />
+
 <table>
   <tr align="left">
 	<th width=20></th>
@@ -8,7 +59,7 @@
     <th></th>
   </tr>
   
-<% Bar.all.each do |f| %>
+<% Bar.find(:all, :order=>"name ASC").each do |f| %>
   <tr>
 	<td>
 	<div id="follow_form">
@@ -17,12 +68,12 @@
 			<%= form_for current_user.bar_followings.find_by_bar_id(f.id),
              		:html => { :method => :delete },
              		:remote => true do |h| %>
-  				<div><%= image_submit_tag "full_star.gif" %></div>
+  				<div class="following"><%= image_submit_tag "full_circle.png" %></div>
 			<% end %>
 		<% else %>
 			<%= form_for current_user.bar_followings.build(:bar_id => f.id), :remote => true do |g| %>
 				<div><%= g.hidden_field :bar_id %></div>
-  				<div><%= image_submit_tag "empty_star.gif" %></div>
+  				<div class="following"><%= image_submit_tag "empty_circle.png" %></div>
 			<% end %>
 		<% end %>
 	<% end %>
