--- a/app/views/beers/index.html.erb
+++ b/app/views/beers/index.html.erb
@@ -3,8 +3,8 @@
 <table>
   <tr align="left">
     <th width=150>Name</th>
-	<th width=220>Brewery</th>
-    <th width=200>Description</th>
+	<th width=250>Brewery</th>
+    <th width=120>Pouring at . . .</th>
     <th></th>
     <th></th>
   </tr>
@@ -13,9 +13,11 @@
   <tr>
     <td><%= link_to beer.name, beer %></td>
 	<td><%= link_to beer.brewery.name, beer.brewery %></td>
-    <td><%= beer.description %></td>
+    <td><%= beer.bars.count %> bars</td>
     <td><%= link_to 'Edit', edit_beer_path(beer) %></td>
+    <% if logged_in? && current_user.id == 1 %>
     <td><%= link_to 'Destroy', beer, :confirm => 'Are you sure?', :method => :delete %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
