--- a/app/views/breweries/_form.html.erb
+++ b/app/views/breweries/_form.html.erb
@@ -1,13 +1,7 @@
 <%= form_for(@brewery) do |f| %>
   <% if @brewery.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@brewery.errors.count, "error") %> prohibited this brewery from being saved:</h2>
-
-      <ul>
-      <% @brewery.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
+      <h2><%= error_messages_for @brewery, :header_message => "Whoops!", :message => "Please address the following:"%></h2>
     </div>
   <% end %>
 
@@ -20,12 +14,16 @@
     <%= f.text_field :address %>
   </div>
   <div class="field">
-    <%= f.label :zip %><br />
-    <%= f.text_field :zip %>
+    <%= f.label :city %><br />
+    <%= f.text_field :city %>
   </div>
   <div class="field">
     <%= f.label :state %><br />
     <%= f.text_field :state %>
+  </div>
+  <div class="field">
+    <%= f.label :zip %><br />
+    <%= f.text_field :zip %>
   </div>
   <div class="actions">
     <%= f.submit %>
