--- a/app/views/beer_items/index.html.erb
+++ b/app/views/beer_items/index.html.erb
@@ -3,7 +3,7 @@
 <p>
 You've stumbled on the best thing to happen to the Atlanta beer scene since Brickstore opened.  This is your gateway to to beers and bars around the Atlanta area.  Use this site to find the best deal on that special beer you've been looking for or just check to see if the bar around the corner has a new one on tap.
 </p>
-<h3>WARNING:</h3><p> Currently, listings are not accurate.  This is still serious testing check back in the future for the real deal.</p>
+<h3>WARNING:</h3><p> Currently, listings are not accurate.  This is still under testing.  Check back in the future for the real deal.</p>
 <div id="itemlist">
 <h3>Latest Additions</h3>
 <table>
