--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,9 @@
 <html>
 <head>
   <title>BeerList</title>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
+  <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/application.css"></style>
+  <script type="text/javascript" src="javascripts/rails.js"</script>
+  <script type="text/javascript" src="javascripts/prototype.js"</script>
   <%= csrf_meta_tag %>
 </head>
 <body>
